--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" href="./leaflet-plugins/leaflet-minimap/dist/Control.MiniMap-de.js"/>
 <link rel="stylesheet" href="./leaflet-plugins/leaflet-coordinates/dist/Leaflet.Coordinates-0.1.3.css">
 <!--[if lte IE 8]><link rel="stylesheet" href="./leaflet-plugins/leaflet-coordinates/dist/Leaflet.Coordinates-0.1.3.ie.css" /><![endif]-->
-<link rel="stylesheet" href="./bootstrap/css/flatly.bootstrap.css">
+<link rel="stylesheet" href="./bootstrap/css/cyborg.bootstrap.css">
 <link rel="stylesheet" href="./bootstrap/css/bootstrap-responsive.min.css">
 <!--<link rel="stylesheet" href="./leaflet/leaflet.css">-->
 <link rel="stylesheet" href="./css/ccb.css">
