--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <!--------------------------------JQuery------------------------------------------>
 <script src="./jquery/jquery-1.9.1.js"></script>
+<script src="./jquery/jquery.cookie.js"></script>
 
 <!----------------------------------CSS----------------------------------------->
 
@@ -22,7 +23,8 @@
 <link rel="stylesheet" href="./leaflet-plugins/leaflet-minimap/dist/Control.MiniMap.css"/>
 <link rel="stylesheet" href="./leaflet-plugins/leaflet-minimap/dist/Control.MiniMap-de.js"/>
 <link rel="stylesheet" href="./leaflet-plugins/leaflet-coordinates/dist/Leaflet.Coordinates-0.1.3.css">
-<!--[if lte IE 8]><link rel="stylesheet" href="./leaflet-plugins/leaflet-coordinates/dist/Leaflet.Coordinates-0.1.3.ie.css" /><![endif]-->
+<!--[if lte IE 8]>
+<link rel="stylesheet" href="./leaflet-plugins/leaflet-coordinates/dist/Leaflet.Coordinates-0.1.3.ie.css"/><![endif]-->
 <link rel="stylesheet" href="./bootstrap/css/cyborg.bootstrap.css">
 <link rel="stylesheet" href="./bootstrap/css/bootstrap-responsive.min.css">
 <!--<link rel="stylesheet" href="./leaflet/leaflet.css">-->
@@ -60,12 +62,22 @@
 var map, geojsonLayer, thisStation, markers, mystation;
 $(document).ready(function () {
 
+    //TODO need to put all functions in one place goddamit!!
+
+
+//    if ($.cookie('modal_shown') == null) {
+//        $.cookie('modal_shown', 'yes', { expires: 7, path: '/' });
+        $('#myModal').modal({
+            keyboard: false
+        });
+
+//    }
+
     $('#action').click(function () {
         $('#map-content').hide();
         $('#water-parameters-container').show();
         $("wp").scrollspy();
     });
-
 
     /*   ========================     Splash Screen  text in <div id="myModal"><div class="modal-body">  =====================================*/
     //$('#myModal').modal({
@@ -91,7 +103,7 @@ $(document).ready(function () {
         attribution: osmAttrib
     });
 
-    var defaultLayer = L.tileLayer.provider('Nokia.satelliteNoLabelsDay',{minZoom: 10, maxZoom: 17}).addTo(map);
+    var defaultLayer = L.tileLayer.provider('Nokia.satelliteNoLabelsDay', {minZoom: 10, maxZoom: 17}).addTo(map);
 
     var cloudmadeURL = 'http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/{styleId}/256/{z}/{x}/{y}.png';
     var nightTime = L.tileLayer(cloudmadeURL, {
@@ -126,7 +138,7 @@ $(document).ready(function () {
         zoomToBoundsOnClick: true
     });
 
-    function handleJson(data) {
+    function handleJson(data) { //TODO need to work on popup, no hover, click, and add onclick link inside of popup
         var geojsonLayer = L.geoJson(data, {
             onEachFeature: function (feature, layer) {
                 layer.bindPopup(feature.properties.station_name);
@@ -148,11 +160,11 @@ $(document).ready(function () {
 
 
     function temp() {
-            $('#map-content').hide();
-             $('#chart-content').show();
+        $('#map-content').hide();
+        $('#chart-content').show();
 
 
-        }
+    }
 
 
     /*  ===========================    GeoServer request    =============================*/
@@ -179,26 +191,26 @@ $(document).ready(function () {
         success: handleJson
     });
 
-    function highlightFeature(e) {
+    function highlightFeature(e) {// TODO this is where the popup should be modified. start using this.target
         var layer = e.target;
         thisStation = e.target.feature.properties.station_name;
         layer.bindPopup('Station: ' + thisStation + '<br>' + 'Click for Station Data').openPopup();
     }
 
-    $("#back-to-map").click(function () {
+    $("#back-to-map").click(function () {//TODO disable on ...
         $('#container1').hide();
         $('#container2').hide();
         $('#container3').hide();
         $('#map').show();
     });
 
-    $("#zoom-out-cape").click(function () {
+    $("#zoom-out-cape").click(function () {//TODO disable on ...
         map.fitBounds(bounds);
     });
 
-    function makeCharts(e) {
+    function makeCharts(e) { //TODO too many arbitrary parameters in my functions, could be trouble
         $('#map').hide();
-        $('#container1').show();
+        $('#container1').show();//TODO there has to be a more efficient way with jquery
         $('#container2').show();
         $('#container3').show();
         $('#container4').show();
@@ -223,23 +235,23 @@ $(document).ready(function () {
 
 
         /*$.ajax({
-            type: "POST",
-            url: "../php/get_station_data.php",
-            password: 'Wyliepup1',
-            data: {
-                "station_num_id": mystation
-            },
-            dataType: 'json',
-            error: function (xhr, ajaxOptions, thrownError) {
-                alert(xhr.status);
-                alert(thrownError);
-            },
-            success: chartParser
-        });*/
+         type: "POST",
+         url: "../php/get_station_data.php",
+         password: 'Wyliepup1',
+         data: {
+         "station_num_id": mystation
+         },
+         dataType: 'json',
+         error: function (xhr, ajaxOptions, thrownError) {
+         alert(xhr.status);
+         alert(thrownError);
+         },
+         success: chartParser
+         });*/
 
         function chartParser(data) {
-            $('#map-content').hide();
-             $('#chart-content').show();
+            $('#map-content').hide();//TODO again, a function with before, present, after (situation) parameter
+            $('#chart-content').show();
 
             for (var i = 0; i < data.length; i++) {
                 sampleDate = data[i][0]; // in milliseconds for Highcharts
@@ -259,13 +271,14 @@ $(document).ready(function () {
 
             }
 
-//            var chart1 = new Highcharts.Chart(chart1_options);
+//            var chart1 = new Highcharts.Chart(chart1_options);//TODO this could be smoother
 //            var chart2 = new Highcharts.Chart(chart2_options);
 //            var chart3 = new Highcharts.Chart(chart3_options);
 //            var chart4 = new Highcharts.Chart(chart4_options);
         }
 
-        var chart1_options = {
+        var chart1_options = {// TODO combine all commonalities into plotOptions() real fuckin soon
+            //TODO lose title, put legend up top, need vertical space
 
             chart: {
                 height: 250,
@@ -745,9 +758,10 @@ $(document).ready(function () {
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
 
         </button>
+
         <h3 id="myModalLabel">Cape Cod Bay Monitoring</h3>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" >
         <p>
             The Provincetown Center for Coastal Studies (PCCS), initiated a water quality monitoring program in
             2006.
@@ -875,13 +889,14 @@ $(document).ready(function () {
 <div id="map-content" class="container-fluid">
     <div class="row-fluid">
         <div class="span3 well well-small rounded ">
+            <img src="images/Color_Logo.svg">
             <h4>Map Content</h4>
+
             <p>I have no idea what to put here. Maybe some instructions?</p>
             bay, focusing specifically on nitrogen and phosphorous. Excessive nutrient input is behind most
             major problems affecting coastal ecosystems, (e.g., eutrophication, algal blooms, hypoxia). It is
             therefore important that we establish baseline data for the bay and continue to closely monitor
             nutrient levels to address existing and imminent problems.</p>
-
 
 
         </div>
@@ -897,118 +912,118 @@ $(document).ready(function () {
     <div class="row-fluid">
         <div class="span3 pull-left">
             <div class="container well">
-            <!--<div class="row">-->
-                    <div class="span3">
-                        <div class="accordion" id="accordion2">
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseOne">
-                                2006
-                            </a>
-                        </div>
-                        <div id="collapseOne" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                <h5>Station Summary</h5>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseTwo">
-                                2007
-                            </a>
-                        </div>
-                        <div id="collapseTwo" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                Station Summary
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseThree">
-                                2008
-                            </a>
-                        </div>
-                        <div id="collapseThree" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                Station Summary
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseFour">
-                               2009
-                            </a>
-                        </div>
-                        <div id="collapseFour" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                               Station Summary
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseFive">
-                                2010
-                            </a>
-                        </div>
-                        <div id="collapseFive" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                Station Summary
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseSix">
-                                2011
-                            </a>
-                        </div>
-                        <div id="collapseSix" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                               Station Summary
-                            </div>
-                        </div>
-                    </div>
-                    <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseSeven">
-                                2012
-                            </a>
-                        </div>
-                        <div id="collapseSeven" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                Station Summary
-                            </div>
-                        </div>
-                    </div>
+                <!--<div class="row">-->
+                <div class="span3">
+                    <div class="accordion" id="accordion2">
                         <div class="accordion-group">
-                        <div class="accordion-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
-                               href="#collapseEight">
-                                2013
-                            </a>
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseOne">
+                                    2006
+                                </a>
+                            </div>
+                            <div id="collapseOne" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    <h5>Station Summary</h5>
+                                </div>
+                            </div>
                         </div>
-                        <div id="collapseEight" class="accordion-body collapse">
-                            <div class="accordion-inner">
-                                Station Summary
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseTwo">
+                                    2007
+                                </a>
+                            </div>
+                            <div id="collapseTwo" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseThree">
+                                    2008
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseFour">
+                                    2009
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseFive">
+                                    2010
+                                </a>
+                            </div>
+                            <div id="collapseFive" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseSix">
+                                    2011
+                                </a>
+                            </div>
+                            <div id="collapseSix" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseSeven">
+                                    2012
+                                </a>
+                            </div>
+                            <div id="collapseSeven" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-group">
+                            <div class="accordion-heading">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapseEight">
+                                    2013
+                                </a>
+                            </div>
+                            <div id="collapseEight" class="accordion-body collapse">
+                                <div class="accordion-inner">
+                                    Station Summary
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                    </div>
-                    <div class="span9">
-                    </div>
+                <div class="span9">
                 </div>
+            </div>
             <!--</div>-->
         </div>
         <div class="span9 rounded pull-right">
